# singer-protocol

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  v0_3_0.rs
